[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/HealthBarr3D.tscn" type="PackedScene" id=1]
[ext_resource path="res://script/special_unit.gd" type="Script" id=2]
[ext_resource path="res://assets/3d_models/enemy_units/bomber_bettle/bomber_bettle_mesh.tscn" type="PackedScene" id=3]
[ext_resource path="res://script/unit_mesh.gd" type="Script" id=4]

[sub_resource type="CylinderShape" id=1]
radius = 0.1
height = 2.43914

[sub_resource type="CylinderShape" id=4]
radius = 5.0

[node name="KinematicBody" type="KinematicBody" groups=[
"player",
]]
transform = Transform( -1.58933e-08, 0, 1, 0, 1, 0, -1, 0, -1.58933e-08, 0, 0, 0 )
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 1.69393e-22, 0, 6.94718e-16, 1, 1.06581e-14, 0, -1.06581e-14, 1, 0, 0, 0 )
shape = SubResource( 1 )

[node name="RayCast" type="RayCast" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0.157294, 0 )
enabled = true
cast_to = Vector3( 2, 0, 0 )

[node name="Timer" type="Timer" parent="."]

[node name="Mesh" type="Spatial" parent="."]
script = ExtResource( 4 )

[node name="unit_type_4" parent="Mesh" instance=ExtResource( 3 )]
transform = Transform( 0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, 0, 0, 0 )

[node name="Tween" type="Tween" parent="."]

[node name="HealthBarr3D" parent="." instance=ExtResource( 1 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 1, 0, 2.20708, 0 )

[node name="zona_de_deteccion" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="zona_de_deteccion"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 4 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="zona_de_deteccion" to="." method="_on_zona_de_deteccion_body_entered"]
